fixedd padding on mobile view in blog post

--- a/src/components/css/blog.css
+++ b/src/components/css/blog.css
@@ -133,6 +133,10 @@
 
     }
 
+    .blog__holder{
+        padding: 0;
+    }
+
     
 }
 
